Bug 256973 - Categories label causes KAddressbook contact editor to grow horizontally when many or long-named categories in use
Summary: Categories label causes KAddressbook contact editor to grow horizontally when...
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-11-15 13:25 UTC by Will Stephenson
Modified: 2010-11-15 13:38 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Will Stephenson 2010-11-15 13:25:44 UTC
Version:           unspecified (using Devel) 
OS:                Linux

The categories label tries to show all categories in their entirety.  This can cause the contact editor to grow wider than the screen.  

Upstream reporter cites the case of addressbooks imported from other tools which may already include long categories: https://bugzilla.novell.com/show_bug.cgi?id=302474

Reproducible: Didn't try

Steps to Reproduce:
Define categories with long names, check them for a contact, look at contact editor.
Comment 1 Tobias Koenig 2010-11-15 13:38:53 UTC
SVN commit 1197332 by tokoe:

Use KSqueezedTextLabel instead of QLabel to avoid
the contact edit dialog to resize.

BUG: 256973


 M  +3 -3      tagwidget.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1197332