Use KSqueezedTextLabel instead of QLabel to avoid the contact edit dialog to resize.

BUG: 256973

svn path=/trunk/KDE/kdepimlibs/; revision=1197332